packages/goo2d_ffi_box2d/src/goo_box2d.h

	GOO_API void gooBodyApplyImpulse( int64_t body, float ix, float iy, int32_t wake );
	GOO_API void gooBodyApplyTorque( int64_t body, float torque, int32_t wake );
	// --- shapes ------------------------------------------------------------
	//
	// One entry point per goo2d ColliderBody subtype. They share a trailing
	// material/filter parameter block rather than a struct, because a struct
	// is exactly what this header exists to avoid.
	//
	// `category` and `mask` are Box2D's b2Filter bits, which are uint64_t in
	// v3.1.1 - wide enough for goo2d's `layer` (a bit index) across all 64
	// layers. `isSensor` maps goo2d's `isTrigger`.

	GOO_API int64_t gooShapeAddCircle( int64_t body, float cx, float cy, float radius, float density,
									   float friction, float restitution, uint64_t category,
									   uint64_t mask, int32_t isSensor );
	GOO_API int64_t gooShapeAddBox( int64_t body, float cx, float cy, float halfWidth,
									float halfHeight, float angle, float density, float friction,
									float restitution, uint64_t category, uint64_t mask,
									int32_t isSensor );
	/// A capsule standing on its y axis, matching goo2d's CapsuleBody:
	/// `halfHeight` is half the TOTAL height, caps included (Unity's
	/// CapsuleCollider2D.size semantics), so the straight section runs
	/// +/- (halfHeight - radius). A capsule shorter than it is wide
	/// degenerates to a circle rather than erroring - the same choice
	/// CapsuleBody.containsLocalPoint already makes.
	GOO_API int64_t gooShapeAddCapsule( int64_t body, float cx, float cy, float radius,
										float halfHeight, float density, float friction,
										float restitution, uint64_t category, uint64_t mask,
										int32_t isSensor );
	/// `pointsXy` is `count` interleaved x,y pairs (2 * count floats) in
	/// body-local space, already offset by the caller. Returns 0 if Box2D's
	/// hull builder rejects the points (fewer than 3, collinear, or beyond
	/// B2_MAX_POLYGON_VERTICES) rather than creating a degenerate shape.
	GOO_API int64_t gooShapeAddPolygon( int64_t body, const float* pointsXy, int32_t count,
										float density, float friction, float restitution,
										uint64_t category, uint64_t mask, int32_t isSensor );
	GOO_API int64_t gooShapeGetBody( int64_t shape );
	GOO_API void gooShapeDestroy( int64_t shape, int32_t updateBodyMass );
	/// Box2D v3 has no per-shape enable flag, so goo2d's
	/// `ColliderBody.enable` is expressed as a filter change: a zero mask
	/// collides with nothing. Dart passes both bits every time rather than
	/// this shim remembering a "real" mask to restore - the authoritative
	/// `layer`/`excludeLayers` already live in component storage, and
	/// caching a second copy here is the drift RULES.md rule 10 describes.
	GOO_API void gooShapeSetFilter( int64_t shape, uint64_t category, uint64_t mask );
	/// Landing 4 needs these on to receive anything from
	/// b2World_GetContactEvents / GetSensorEvents.
	GOO_API void gooShapeEnableContactEvents( int64_t shape, int32_t flag );
	GOO_API void gooShapeEnableSensorEvents( int64_t shape, int32_t flag );
	// --- bulk transfer -----------------------------------------------------
	//
	// The whole reason this shim is worth having. A per-body FFI call would
	// cost 2N calls per tick to push gameplay-authored transforms in and
	// pull simulated ones back out. These do it in two, regardless of N.
	//
	// The buffers are plain caller-owned arrays - this shim deliberately
	// knows NOTHING about goo's memory pool. The pool is bit-packed by
	// DataDescriptor's cursor, so a C struct mirroring a row would be a
	// second copy of that layout which has to agree with data_layout.dart by
	// hand, and RULES.md rule 10 exists precisely to stop that.

	/// Pushes `count` transforms into the world. `bodies` is `count` packed
	/// handles; `xya` is 3 floats per body. A zero or stale handle is
	/// skipped, so a caller need not compact its arrays when an entity dies
	/// mid-tick.
	GOO_API void gooBodiesPushTransforms( const int64_t* bodies, const float* xya, int32_t count );
	/// The reverse: reads `count` transforms out into `outXya` (3 floats
	/// per body). A skipped body leaves its 3 slots untouched, so the
	/// caller's previous values survive rather than becoming zeros.
	GOO_API void gooBodiesPullTransforms( const int64_t* bodies, float* outXya, int32_t count );
	/// Velocities alongside the transforms, same skipping rules, 3 floats
	/// per body ({vx, vy, w}).
	GOO_API void gooBodiesPushVelocities( const int64_t* bodies, const float* vel, int32_t count );
	GOO_API void gooBodiesPullVelocities( const int64_t* bodies, float* outVel, int32_t count );
	/// Drains this step's contact (non-sensor) touch transitions.
	///
	/// `shapeA`/`shapeB` are packed shape handles. Events beyond `maxEvents`
	/// are **dropped**, and the caller is expected to size its buffer from
	/// the previous tick's return value rather than have this grow one.
	GOO_API int32_t gooWorldDrainContacts( int64_t world, int64_t* out, int32_t maxEvents );