packages/goo2d_ffi_box2d/lib/src/box2d.g.dart


  late final _gooBodyApplyImpulsePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Float, ffi.Float,
              ffi.Int32)>>('gooBodyApplyImpulse');
  late final _gooBodyApplyImpulse = _gooBodyApplyImpulsePtr
      .asFunction<void Function(int, double, double, int)>();

  void gooBodyApplyTorque(
    int body,
    double torque,
    int wake,
  ) {
    return _gooBodyApplyTorque(
      body,
      torque,
      wake,
    );
  }

  late final _gooBodyApplyTorquePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Int64, ffi.Float, ffi.Int32)>>(
      'gooBodyApplyTorque');
  late final _gooBodyApplyTorque =
      _gooBodyApplyTorquePtr.asFunction<void Function(int, double, int)>();

  /// --- shapes ------------------------------------------------------------
  ///
  /// One entry point per goo2d ColliderBody subtype. They share a trailing
  /// material/filter parameter block rather than a struct, because a struct
  /// is exactly what this header exists to avoid.
  ///
  /// `category` and `mask` are Box2D's b2Filter bits, which are uint64_t in
  /// v3.1.1 - wide enough for goo2d's `layer` (a bit index) across all 64
  /// layers. `isSensor` maps goo2d's `isTrigger`.
  int gooShapeAddCircle(
    int body,
    double cx,
    double cy,
    double radius,
    double density,
    double friction,
    double restitution,
    int category,
    int mask,
    int isSensor,
  ) {
    return _gooShapeAddCircle(
      body,
      cx,
      cy,
      radius,
      density,
      friction,
      restitution,
      category,
      mask,
      isSensor,
    );
  }

  late final _gooShapeAddCirclePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Int64,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Uint64,
              ffi.Uint64,
              ffi.Int32)>>('gooShapeAddCircle');
  late final _gooShapeAddCircle = _gooShapeAddCirclePtr.asFunction<
      int Function(int, double, double, double, double, double, double, int,
          int, int)>();

  int gooShapeAddBox(
    int body,
    double cx,
    double cy,
    double halfWidth,
    double halfHeight,
    double angle,
    double density,
    double friction,
    double restitution,
    int category,
    int mask,
    int isSensor,
  ) {
    return _gooShapeAddBox(
      body,
      cx,
      cy,
      halfWidth,
      halfHeight,
      angle,
      density,
      friction,
      restitution,
      category,
      mask,
      isSensor,
    );
  }

  late final _gooShapeAddBoxPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Int64,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Uint64,
              ffi.Uint64,
              ffi.Int32)>>('gooShapeAddBox');
  late final _gooShapeAddBox = _gooShapeAddBoxPtr.asFunction<
      int Function(int, double, double, double, double, double, double, double,
          double, int, int, int)>();

  /// A capsule standing on its y axis, matching goo2d's CapsuleBody:
  /// `halfHeight` is half the TOTAL height, caps included (Unity's
  /// CapsuleCollider2D.size semantics), so the straight section runs
  /// +/- (halfHeight - radius). A capsule shorter than it is wide
  /// degenerates to a circle rather than erroring - the same choice
  /// CapsuleBody.containsLocalPoint already makes.
  int gooShapeAddCapsule(
    int body,
    double cx,
    double cy,
    double radius,
    double halfHeight,
    double density,
    double friction,
    double restitution,
    int category,
    int mask,
    int isSensor,
  ) {
    return _gooShapeAddCapsule(
      body,
      cx,
      cy,
      radius,
      halfHeight,
      density,
      friction,
      restitution,
      category,
      mask,
      isSensor,
    );
  }

  late final _gooShapeAddCapsulePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Int64,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Uint64,
              ffi.Uint64,
              ffi.Int32)>>('gooShapeAddCapsule');
  late final _gooShapeAddCapsule = _gooShapeAddCapsulePtr.asFunction<
      int Function(int, double, double, double, double, double, double, double,
          int, int, int)>();

  /// `pointsXy` is `count` interleaved x,y pairs (2 * count floats) in
  /// body-local space, already offset by the caller. Returns 0 if Box2D's
  /// hull builder rejects the points (fewer than 3, collinear, or beyond
  /// B2_MAX_POLYGON_VERTICES) rather than creating a degenerate shape.
  int gooShapeAddPolygon(
    int body,
    ffi.Pointer<ffi.Float> pointsXy,
    int count,
    double density,
    double friction,
    double restitution,
    int category,
    int mask,
    int isSensor,
  ) {
    return _gooShapeAddPolygon(
      body,
      pointsXy,
      count,
      density,
      friction,
      restitution,
      category,
      mask,
      isSensor,
    );
  }

  late final _gooShapeAddPolygonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Int64,
              ffi.Pointer<ffi.Float>,
              ffi.Int32,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Uint64,
              ffi.Uint64,
              ffi.Int32)>>('gooShapeAddPolygon');
  late final _gooShapeAddPolygon = _gooShapeAddPolygonPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Float>, int, double, double, double,
          int, int, int)>();

  int gooShapeGetBody(
    int shape,
  ) {
    return _gooShapeGetBody(
      shape,
    );
  }

  late final _gooShapeGetBodyPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Int64)>>(
          'gooShapeGetBody');
  late final _gooShapeGetBody =
      _gooShapeGetBodyPtr.asFunction<int Function(int)>();

  void gooShapeDestroy(
    int shape,
    int updateBodyMass,
  ) {
    return _gooShapeDestroy(
      shape,
      updateBodyMass,
    );
  }

  late final _gooShapeDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Int32)>>(
          'gooShapeDestroy');
  late final _gooShapeDestroy =
      _gooShapeDestroyPtr.asFunction<void Function(int, int)>();

  /// Box2D v3 has no per-shape enable flag, so goo2d's
  /// `ColliderBody.enable` is expressed as a filter change: a zero mask
  /// collides with nothing. Dart passes both bits every time rather than
  /// this shim remembering a "real" mask to restore - the authoritative
  /// `layer`/`excludeLayers` already live in component storage, and
  /// caching a second copy here is the drift RULES.md rule 10 describes.
  void gooShapeSetFilter(
    int shape,
    int category,
    int mask,
  ) {
    return _gooShapeSetFilter(
      shape,
      category,
      mask,
    );
  }

  late final _gooShapeSetFilterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Int64, ffi.Uint64, ffi.Uint64)>>('gooShapeSetFilter');
  late final _gooShapeSetFilter =
      _gooShapeSetFilterPtr.asFunction<void Function(int, int, int)>();

  /// Landing 4 needs these on to receive anything from
  /// b2World_GetContactEvents / GetSensorEvents.
  void gooShapeEnableContactEvents(
    int shape,
    int flag,
  ) {
    return _gooShapeEnableContactEvents(
      shape,
      flag,
    );
  }

  late final _gooShapeEnableContactEventsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Int32)>>(
          'gooShapeEnableContactEvents');
  late final _gooShapeEnableContactEvents =
      _gooShapeEnableContactEventsPtr.asFunction<void Function(int, int)>();

  void gooShapeEnableSensorEvents(
    int shape,
    int flag,
  ) {
    return _gooShapeEnableSensorEvents(
      shape,
      flag,
    );
  }

  late final _gooShapeEnableSensorEventsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Int32)>>(
          'gooShapeEnableSensorEvents');
  late final _gooShapeEnableSensorEvents =
      _gooShapeEnableSensorEventsPtr.asFunction<void Function(int, int)>();

  /// Pushes `count` transforms into the world. `bodies` is `count` packed
  /// handles; `xya` is 3 floats per body. A zero or stale handle is
  /// skipped, so a caller need not compact its arrays when an entity dies
  /// mid-tick.
  void gooBodiesPushTransforms(
    ffi.Pointer<ffi.Int64> bodies,
    ffi.Pointer<ffi.Float> xya,
    int count,
  ) {
    return _gooBodiesPushTransforms(
      bodies,
      xya,
      count,
    );
  }

  late final _gooBodiesPushTransformsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Float>,
              ffi.Int32)>>('gooBodiesPushTransforms');
  late final _gooBodiesPushTransforms = _gooBodiesPushTransformsPtr.asFunction<
      void Function(ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Float>, int)>();

  /// The reverse: reads `count` transforms out into `outXya` (3 floats
  /// per body). A skipped body leaves its 3 slots untouched, so the
  /// caller's previous values survive rather than becoming zeros.
  void gooBodiesPullTransforms(
    ffi.Pointer<ffi.Int64> bodies,
    ffi.Pointer<ffi.Float> outXya,
    int count,
  ) {
    return _gooBodiesPullTransforms(
      bodies,
      outXya,
      count,
    );
  }

  late final _gooBodiesPullTransformsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Float>,
              ffi.Int32)>>('gooBodiesPullTransforms');
  late final _gooBodiesPullTransforms = _gooBodiesPullTransformsPtr.asFunction<
      void Function(ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Float>, int)>();

  /// Velocities alongside the transforms, same skipping rules, 3 floats
  /// per body ({vx, vy, w}).
  void gooBodiesPushVelocities(
    ffi.Pointer<ffi.Int64> bodies,
    ffi.Pointer<ffi.Float> vel,
    int count,
  ) {
    return _gooBodiesPushVelocities(
      bodies,
      vel,
      count,
    );
  }

  late final _gooBodiesPushVelocitiesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Float>,
              ffi.Int32)>>('gooBodiesPushVelocities');
  late final _gooBodiesPushVelocities = _gooBodiesPushVelocitiesPtr.asFunction<
      void Function(ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Float>, int)>();

  void gooBodiesPullVelocities(
    ffi.Pointer<ffi.Int64> bodies,
    ffi.Pointer<ffi.Float> outVel,
    int count,
  ) {
    return _gooBodiesPullVelocities(
      bodies,
      outVel,
      count,
    );
  }

  late final _gooBodiesPullVelocitiesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Float>,
              ffi.Int32)>>('gooBodiesPullVelocities');
  late final _gooBodiesPullVelocities = _gooBodiesPullVelocitiesPtr.asFunction<
      void Function(ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Float>, int)>();

  /// Drains this step's contact (non-sensor) touch transitions.
  ///
  /// `shapeA`/`shapeB` are packed shape handles. Events beyond `maxEvents`
  /// are **dropped**, and the caller is expected to size its buffer from
  /// the previous tick's return value rather than have this grow one.
  int gooWorldDrainContacts(
    int world,
    ffi.Pointer<ffi.Int64> out,
    int maxEvents,
  ) {
    return _gooWorldDrainContacts(
      world,
      out,
      maxEvents,
    );
  }
